# executive-ai-assistant

./: .gitignore  notes.md  pyproject.toml
eaia/: gmail.py
eaia/main/: config.yaml
scripts/: load_env.py  run_ingest.py  setup_gmail.py
